// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin builds worker 1`] = `
"const test = 1;

const worker = new Worker(new URL('worker-3a9533d0.js', document.baseURI).href, { type: 'module' });

console.log(test);
"
`;

exports[`plugin builds worker 2`] = `
"console.log('hello world from worker');
"
`;

exports[`plugin does nothing when cannot find worker 1`] = `
"console.log('noop');
"
`;

exports[`plugin excludes input files 1`] = `
"const test = 1;

const worker = new Worker('./worker.js', { type: 'module' });

console.log(test);
"
`;
